fix spacing on some browsers

--- a/style.css
+++ b/style.css
@@ -192,8 +192,13 @@ nav > h3 > a {
 nav > a > div {
     width: 100%;
     padding-bottom: 5px;
-    margin-left: 20px;
+    margin-left: 0;
     transition: color ease-in-out 0.1s, margin-left ease-in-out 0.1s;
+    color: transparent;
+}
+
+nav:hover a div {
+    margin-left: 20px;
     color: #555555;
 }
 
